autosar_includes = ['-I', meson.current_source_dir() / 'source' / 'os']

autosar_apps = [
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm2',    'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm2',    'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm2',    'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm3',    'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm3',    'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm3',    'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm3',    'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm3',    'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'complex1',  'name': 'a',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'complex1',  'name': 'b',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'complex1',  'name': 'c',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'complex1',  'name': 'd',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'complex2',  'name': 'a',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'counter1',  'name': 'a',                     'oil': 'system.json'},
# {'core': 'singlecore', 'path': 'bcc1' / 'depsvc',    'name': 'depsvc',                'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'hoffmann',  'name': 'a',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'isr2',      'name': 'a',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'isr2',      'name': 'b',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'isr2',      'name': 'c',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'isr2',      'name': 'd',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'isr2',      'name': 'e',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'lukas',     'name': 'alarmstress',           'oil': 'alarmstress.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'lukas',     'name': 'dispatch',              'oil': 'dispatch.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'lukas',     'name': 'isr2',                  'oil': 'isr2.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'g',                     'oil': 'system.json', 'trace': 'g.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'h',                     'oil': 'system.json', 'trace': 'h.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'j',                     'oil': 'system.json', 'trace': 'j.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'k',                     'oil': 'system.json', 'trace': 'k.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'l',                     'oil': 'system.json', 'trace': 'l.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource2', 'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource2', 'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'sse1',      'name': 'a',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'sse1',      'name': 'b',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'sse1',      'name': 'c',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'g',                     'oil': 'system.json', 'trace': 'g.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task2',     'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task2',     'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task2',     'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'complex',            'name': 'copter-without-alarms', 'oil': 'system-without-alarms.json'},
  {'core': 'singlecore', 'path': 'complex',            'name': 'isorc',                 'oil': 'isorc.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'g',                     'oil': 'system.json', 'trace': 'g.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'h',                     'oil': 'system.json', 'trace': 'h.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'g',                     'oil': 'system.json', 'trace': 'g.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'multicore',  'path': '',                   'name': 'minexample',            'oil': 'minexample.json'},
  {'core': 'multicore',  'path': 'locks',              'name': 'a',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks',              'name': 'b',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks',              'name': 'c',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks',              'name': 'd',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks',              'name': 'e',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'loops',              'name': 'a',                     'oil': 'system_a.json'},
  {'core': 'multicore',  'path': 'loops',              'name': 'b',                     'oil': 'system_b.json'},
  {'core': 'multicore',  'path': 'loops',              'name': 'c',                     'oil': 'system_b.json'},
  {'core': 'multicore',  'path': 'timing',             'name': 'a',                     'oil': 'system_a.json', 'timing': 'a_timing.json'},
  {'core': 'multicore',  'path': 'timing',             'name': 'b',                     'oil': 'system_b.json', 'timing': 'b_timing.json'},
  {'core': 'multicore',  'path': 'timing',             'name': 'c',                     'oil': 'system_c.json', 'timing': 'c_timing.json'},
]

autosar_targets = []
autosar_targets_with_test = []
foreach app : autosar_apps
  # src file
  sys = app['core'] / app['path'] / app['name']
  full_name = 'autosar_' + sys.underscorify()
  app += {'src': files(sys + '.cc'), 'full_name': full_name}


  #oil file
  if app['oil'] == 'EXTRACT'
    oil = custom_target('autosar_' + sys.underscorify() + '.system.json',
                        input: sys + '.cc',
                        output : full_name + '.system.json',
                        capture: true,
                        command : [sed, '-n', '/if SYSTEM_JSON/,/SYSTEM_JSON/{/SYSTEM_JSON/d;p}', '@INPUT@'])
  else
    oil = files(app['core'] / app['path'] / app['oil'])
  endif
  app += {'oil': oil}

  # compile the application
  app_ll = custom_target(full_name,
                         input : sys + '.cc',
                         output : full_name + '.ll',
                         depfile : full_name + '.ll.dep',
                         command : clang_cpp +
                                   libs_includes +
                                   ir_flags +
                                   clang_flags)
  app += {'ll': app_ll}

  # trace file for sse testing
  if not app.has_key('trace')
    sys_test =  disabler()
  elif app['trace'] == 'EXTRACT'
    sys_test = custom_target(full_name + '.trace.json',
                             input: sys + '.cc',
                             output : full_name + '.trace.json',
                             capture: true,
                             command : [sed, '-n', '/if TRACE_JSON/,/TRACE_JSON/{/TRACE_JSON/d;p}', '@INPUT@'])
  else
    sys_test = files(app['core'] / app['path'] / app['trace'])
  endif
  app += {'sys_test': sys_test}

  # timings for multisse with lock elision
  if not app.has_key('timing')
    sys_timings = disabler()
  elif app['timing'] == 'EXTRACT'
    sys_timings = custom_target(full_name + '.timing.json',
                                input: sys + '.cc',
                                output : full_name + '.timing.json',
                                capture: true,
                                command : [sed, '-n', '/if TIMING_JSON/,/TIMING_JSON/{/TIMING_JSON/d;p}', '@INPUT@'])
  else
    sys_timings = files(app['core'] / app['path'] / app['timing'])
  endif
  app += {'sys_timings': sys_timings}
  set_variable(full_name, app)
  autosar_targets += [app]
endforeach
