autosar_includes = ['-I', meson.current_source_dir() / 'source' / 'os']

autosar_apps = [
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm1',    'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm2',    'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm2',    'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm2',    'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm3',    'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm3',    'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm3',    'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm3',    'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'alarm3',    'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'complex1',  'name': 'a',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'complex1',  'name': 'b',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'complex1',  'name': 'c',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'complex1',  'name': 'd',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'complex2',  'name': 'a',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'counter1',  'name': 'a',                     'oil': 'system.json'},
# {'core': 'singlecore', 'path': 'bcc1' / 'depsvc',    'name': 'depsvc',                'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'hoffmann',  'name': 'a',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'isr2',      'name': 'a',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'isr2',      'name': 'b',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'isr2',      'name': 'c',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'isr2',      'name': 'd',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'isr2',      'name': 'e',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'lukas',     'name': 'alarmstress',           'oil': 'alarmstress.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'lukas',     'name': 'dispatch',              'oil': 'dispatch.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'lukas',     'name': 'isr2',                  'oil': 'isr2.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'g',                     'oil': 'system.json', 'trace': 'g.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'h',                     'oil': 'system.json', 'trace': 'h.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'j',                     'oil': 'system.json', 'trace': 'j.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'k',                     'oil': 'system.json', 'trace': 'k.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource1', 'name': 'l',                     'oil': 'system.json', 'trace': 'l.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource2', 'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'resource2', 'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'sse1',      'name': 'a',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'sse1',      'name': 'b',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'sse1',      'name': 'c',                     'oil': 'system.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task1',     'name': 'g',                     'oil': 'system.json', 'trace': 'g.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task2',     'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task2',     'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'bcc1' / 'task2',     'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'complex',            'name': 'copter-without-alarms', 'oil': 'system-without-alarms.json'},
  {'core': 'singlecore', 'path': 'complex',            'name': 'isorc',                 'oil': 'isorc.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'g',                     'oil': 'system.json', 'trace': 'g.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'bt1',       'name': 'h',                     'oil': 'system.json', 'trace': 'h.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'event1',    'name': 'g',                     'oil': 'system.json', 'trace': 'g.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'a',                     'oil': 'system.json', 'trace': 'a.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'b',                     'oil': 'system.json', 'trace': 'b.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'c',                     'oil': 'system.json', 'trace': 'c.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'd',                     'oil': 'system.json', 'trace': 'd.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
  {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
  {'core': 'multicore',  'path': '',                   'name': 'minexample',            'oil': 'minexample.json'},
  {'core': 'multicore',  'path': 'interrupts',        'name': 'a',                     'oil': 'a_system.json', 'timing': 'a_timings.json'},
  {'core': 'multicore',  'path': 'locks' / '2cores',  'name': 'a',                     'oil': 'system.json', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '2cores',  'name': 'a_start1',              'oil': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '2cores',  'name': 'b',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks' / '2cores',  'name': 'c',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks' / '2cores',  'name': 'd',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'a',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'b',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'c',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'd',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'e',                     'oil': 'system.json'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'f',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'g',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'h',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'i',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'j',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'k',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'l',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'm',                     'oil': 'system_m.json'},
  {'core': 'multicore',  'path': 'locks' / '3cores',  'name': 'n',                     'oil': 'system_m.json'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'identity-a',         'oil': 'identity-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'identity-a-start5',  'oil': 'EXTRACT',              'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'identity-b',         'oil': 'identity-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'identity-c',         'oil': 'identity-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'identity-d',         'oil': 'identity-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'identity-e',         'oil': 'identity-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'triple-a',           'oil': 'triple-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'triple-a-start5',    'oil': 'EXTRACT',            'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'triple-b',           'oil': 'triple-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'triple-c',           'oil': 'triple-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'locks' / '6cores',  'name': 'triple-d',           'oil': 'triple-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'loops',              'name': 'a',                     'oil': 'system_a.json'},
  {'core': 'multicore',  'path': 'loops',              'name': 'b',                     'oil': 'system_b.json'},
  {'core': 'multicore',  'path': 'loops',              'name': 'c',                     'oil': 'system_b.json'},
  {'core': 'multicore',  'path': 'timing',             'name': 'a',                     'oil': 'system_a.json', 'timing': 'a_timing.json'},
  {'core': 'multicore',  'path': 'timing',             'name': 'b',                     'oil': 'system_b.json', 'timing': 'b_timing.json'},
  {'core': 'multicore',  'path': 'timing',             'name': 'c',                     'oil': 'system_c.json', 'timing': 'c_timing.json'},
  {'core': 'multicore',  'path': 'paper',              'name': 'minimal',               'oil': 'system_minimal.json', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'paper',              'name': 'event',                 'oil': 'system_event.json', 'locks': 'EXTRACT'},
  {'core': 'multicore',  'path': 'paper',              'name': 'timing',                'oil': 'system_timing.json', 'locks': 'EXTRACT', 'timing': 'timing_timing.json'},
  {'core': 'multicore',  'path': 'paper',              'name': 'timing-semiordered',                'oil': 'system_timing.json', 'locks': 'EXTRACT', 'timing': 'timing_timing.json'},
  {'core': 'multicore',  'path': 'paper',              'name': 'timing-ordered',                'oil': 'system_timing.json', 'locks': 'EXTRACT', 'timing': 'timing_timing.json'},
  {'core': 'multicore',  'path': 'complex',            'name': 'copter-without-alarms', 'oil': 'copter-without-alarms_system.json', 'timing': 'copter-without-alarms_timing.json'},
  {'core': 'multicore',  'path': 'complex',            'name': 'copter-with-alarms', 'oil': 'copter-with-alarms_system.json', 'timing': 'copter-with-alarms_timing.json'},
  {'core': 'multicore',  'path': 'complex',            'name': 'copter-single-alarm', 'oil': 'copter-single-alarm_system.json', 'timing': 'copter-single-alarm_timing.json'},
]

autosar_targets = []
autosar_targets_with_test = []
foreach app : autosar_apps
  # src file
  sys = app['core'] / app['path'] / app['name']
  full_name = 'autosar_' + sys.underscorify()
  app += {'src': files(sys + '.cc'), 'full_name': full_name}


  #oil file
  if app['oil'] == 'EXTRACT'
    oil = custom_target('autosar_' + sys.underscorify() + '.system.json',
                        input: sys + '.cc',
                        output : full_name + '.system.json',
                        capture: true,
                        command : [sed, '-n', '/if SYSTEM_JSON/,/SYSTEM_JSON/{/SYSTEM_JSON/d;p}', '@INPUT@'])
  else
    oil = files(app['core'] / app['path'] / app['oil'])
  endif
  app += {'oil': oil}

  # compile the application
  app_ll = custom_target(full_name,
                         input : sys + '.cc',
                         output : full_name + '.ll',
                         depfile : full_name + '.ll.dep',
                         command : clang_cpp +
                                   libs_includes +
                                   ir_flags +
                                   clang_flags)
  app += {'ll': app_ll}

  run_target('run_lock_elision_no_timings_' + full_name,
             command: [py3_inst, ara_py, app_ll, '--oilfile', oil, '-s', 'LockElision'])


  # trace file for sse testing
  if not app.has_key('trace')
    sys_test =  disabler()
  elif app['trace'] == 'EXTRACT'
    sys_test = custom_target(full_name + '.trace.json',
                             input: sys + '.cc',
                             output : full_name + '.trace.json',
                             capture: true,
                             command : [sed, '-n', '/if TRACE_JSON/,/TRACE_JSON/{/TRACE_JSON/d;p}', '@INPUT@'])
  else
    sys_test = files(app['core'] / app['path'] / app['trace'])
  endif
  app += {'sys_test': sys_test}

  # timings for multisse with lock elision
  if not app.has_key('timing')
    sys_timings = disabler()
  elif app['timing'] == 'EXTRACT'
    sys_timings = custom_target(full_name + '.timing.json',
                                input: sys + '.cc',
                                output : full_name + '.timing.json',
                                capture: true,
                                command : [sed, '-n', '/if TIMING_JSON/,/TIMING_JSON/{/TIMING_JSON/d;p}', '@INPUT@'])
  else
    sys_timings = files(app['core'] / app['path'] / app['timing'])
  endif
  app += {'sys_timings': sys_timings}

  generate_timing_settings = custom_target(
    output: full_name  + '.generate_timing_settings.json',
    capture: true,
    command: ['echo', '{"steps": ["ApplyTimings", "LoadOIL", "DumpCFG"], "ApplyTimings": {"create_timings": "' +  app['full_name'] +'.empty_timing.json"}}'],
  )

  with_timing_settings = custom_target(
    output: full_name  + '.with_timing_settings.json',
    capture: true,
    command: ['echo', '{"steps": ["ApplyTimings", "LockElision", "DumpCFG"], "MultiSSE": {"with_times": true, "dump": true}}'],
  )


  run_target('run_lock_elision_generate_timings_' + full_name,
             command: [py3_inst, ara_py, app['ll'], '--oilfile', app['oil'], '--step-settings', generate_timing_settings])
  run_target('run_lock_elision_with_timings_' + full_name,
             command: [py3_inst, ara_py, app['ll'], '--oilfile', app['oil'], '--step-settings', with_timing_settings, '--timings', app['sys_timings']])

  # lock elision test data
  if app.has_key('locks')
    if app['locks'] == 'EXTRACT'
      locks = custom_target(full_name + '.locks.json',
                            input: sys + '.cc',
                            output : full_name + '.locks.json',
                            capture: true,
                            command : [sed, '-n', '/if LOCKS_JSON/,/LOCKS_JSON/{/LOCKS_JSON/d;p}', '@INPUT@'])
    elif app.has_key('locks')
      locks = files(app['core'] / app['path'] / app['locks'])
    endif
    app += {'locks': locks}
  endif
  set_variable(full_name, app)
  autosar_targets += [app]
endforeach
